--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ include(pico_sdk_import.cmake)
 
 project(test_project C CXX ASM)
 
+include(PicoSDKConfig.cmake)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
